src/objects/Post__c.object
<CustomObject>
    <description>This is a Custom object created for the HAS Form Implementation. It&apos;s purpose is to hold details of posts held by the nominee that make them a worthy candidate. It will be a child object in a master detail relationship with the Case object.</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the nominee left this post</description>
        <label>End Date</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nomination_Id__c</fullName>
        <description>Stores the id of the nomination providing a relationship to the case.</description>
        <label>Nomination</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Posts</relationshipLabel>
        <relationshipName>Posts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <description>Was/Is this a paid post?</description>
        <label>Position Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_End_Date__c</fullName>
        <description>Shows when the nominee started and ended the post. This is surfaced on the VF Posts Page.</description>
        <formula>Start_Date__c &amp; &quot; to &quot; &amp; End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date to End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the nominee started in this post</description>
        <label>Start Date</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Post</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>